--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
 </head>
-<body>
+<body style="margin: 0; height: 100%; overflow: hidden">
   <app-root></app-root>
 </body>
 </html>
